papildytas strings.xml kodas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MarkTech_10_31</string>
+    <string-array name="counting_options">
+        <item>Chars</item>
+        <item>Words</item>
+    </string-array>
 </resources>
